--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,21 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # h2 db setting
-spring.datasource.url=jdbc:h2:~/test;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
+#spring.datasource.url=jdbc:h2:~/test;
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=admin
+#spring.datasource.password=1234
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # hibernate setting
+spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
