--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,13 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.3.9</version>
 		</dependency>
+		<!-- validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.5.6</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
