--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.5.6</version>
 		</dependency>
+		<!-- JWT -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
