--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,10 +1,10 @@
 
-spring.security.oauth2.client.registration.google.client-id=
-spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.client-id=a
+spring.security.oauth2.client.registration.google.client-secret=q
 spring.security.oauth2.client.registration.google.scope=profile,email
 # Naver registration
-spring.security.oauth2.client.registration.naver.client-id=
-spring.security.oauth2.client.registration.naver.client-secret=
+spring.security.oauth2.client.registration.naver.client-id=q
+spring.security.oauth2.client.registration.naver.client-secret=q
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
@@ -14,7 +14,7 @@ spring.security.oauth2.client.provider.naver.token_uri=https://nid.naver.com/oau
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user_name_attribute=response
 # Kakao registragtion
-spring.security.oauth2.client.registration.kakao.client-id=
+spring.security.oauth2.client.registration.kakao.client-id=q
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization_grant_type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile,account_email
