--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.include=oauth
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# h2 db setting
+# db setting
 #spring.datasource.url=jdbc:h2:~/test;
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=admin
@@ -24,5 +24,24 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
+# jwt
 jwt.secret=
-jwt.tokenPrefix=
+jwt.tokenPrefix=Bearer
+
+# redis
+#spring.cache.type=redis
+spring.redis.host =localhost
+spring.redis.port=6379
+spring.redis.pool.max-idle=8 # pool settings ...
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+
+# Email Send Configuration_SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
