--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,17 @@ services:
       - postgres
     ports:
       - "8080:8080"
-  react:
-    container_name: react
-    image: node:12-alpine
-    command: sh -c "npm install && npm start"
-    ports:
-      - 3000:3000
-    working_dir: /app
-    volumes:
-      - ./react-social:/app
-    networks:
-      - front_network
+#  nextjs:
+#    container_name: nextjs
+#    image: node:12-alpine
+#    command: sh -c "npm install && npm start"
+#    ports:
+#      - 3000:3000
+#    working_dir: /app
+#    volumes:
+#      - ./react-social:/app
+#    networks:
+#      - front_network
   postgres:
     container_name: postgres
     image: postgres:latest
@@ -35,6 +35,14 @@ services:
       - POSTGRES_DATABASE: postgres
       - POSTGRES_PASSWORD: 1234
       - TZ=Asia/Seoul
+  redis:
+    container_name: redis
+    image: redis:latest
+    restart: always
+    command: redis-server --port 6379
+    hostname: localhost
+    ports:
+      - "6379:6379"
   networks:
     db_network:
     front_network:
