--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,9 @@ services:
       - ./db:/var/lib/postgresql
       - ./init.sql:/docker-entrypoint-initdb.d/1-init.sql
     environment:
-      - POSTGRES_USER: test
-      - POSTGRES_DATABASE: postgres
-      - POSTGRES_PASSWORD: 1234
+      - POSTGRES_USER=test
+      - POSTGRES_DATABASE=postgres
+      - POSTGRES_PASSWORD=1234
       - TZ=Asia/Seoul
   redis:
     container_name: redis
